--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </head> 
       <noscript><iframe height=0 src="https://www.googletagmanager.com/ns.html?id=GTM-TVDV7GZ"style=display:none;visibility:hidden width=0></iframe></noscript>
       <style>.manada{background:url(images/likes.png);font-size:13px;background-repeat:no-repeat;padding-left:43px;padding-right:6px;padding-top:3px;padding-bottom:2px;margin-top:-10px;float:right;background-color:#fff!important;border:solid #eaebef;border-radius:19px}</style>
-      <main id=main1>
+      <main>
          <section class=hero>
             <div class=container>
                <div class=row>
