--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <link href=https://scripts.converteai.net rel=dns-prefetch>
       <link href=https://images.converteai.net rel=dns-prefetch>
       <link href=https://api.vturb.com.br rel=dns-prefetch>
-   <body oncontextmenu=return!1 onkeydown=return!1 style=background-color:#fff>
+   <body style=background-color:#fff>
       </head> 
       <noscript><iframe height=0 src="https://www.googletagmanager.com/ns.html?id=GTM-TVDV7GZ"style=display:none;visibility:hidden width=0></iframe></noscript>
       <style>.manada{background:url(images/likes.png);font-size:13px;background-repeat:no-repeat;padding-left:43px;padding-right:6px;padding-top:3px;padding-bottom:2px;margin-top:-10px;float:right;background-color:#fff!important;border:solid #eaebef;border-radius:19px}</style>
@@ -353,4 +353,4 @@
          setTimeout("backquente()", 60000); //10 minutos em ms
          </script>
 
-      <script src=scriptdecompradores/js/jquery-3.3.1.min.js></script><script src=scriptdecompradores/js/bootstrap.bundle.js></script><script src=scriptdecompradores/js/lobibox.js></script><script src=scriptdecompradores/js/lobibox-content.js></script><script>var pessoasaovivo1=document.getElementById("pessoasaovivo");pessoasaovivo1.style.display="block",setTimeout(function(){pessoasaovivo1.style.display="none"},173e4)</script><script>function add(){number+=Math.floor(6*Math.random()+1),document.getElementById("number").innerHTML=number,setTimeout("add()",5e3)}function generate(){number=Math.floor(1143*Math.random())+1578,document.getElementById("number").innerHTML=number,add()}generate()</script><script>var divmain2=document.getElementById("divbotao2");divmain2.style.display="none",setTimeout(function(){divmain2.style.display="block"},173e4)</script>     <script>document.oncontextmenu = document.body.oncontextmenu = function() {return false;}</script>
+      <script src=scriptdecompradores/js/jquery-3.3.1.min.js></script><script src=scriptdecompradores/js/bootstrap.bundle.js></script><script src=scriptdecompradores/js/lobibox.js></script><script src=scriptdecompradores/js/lobibox-content.js></script><script>var pessoasaovivo1=document.getElementById("pessoasaovivo");pessoasaovivo1.style.display="block",setTimeout(function(){pessoasaovivo1.style.display="none"},173e4)</script><script>function add(){number+=Math.floor(6*Math.random()+1),document.getElementById("number").innerHTML=number,setTimeout("add()",5e3)}function generate(){number=Math.floor(1143*Math.random())+1578,document.getElementById("number").innerHTML=number,add()}generate()</script><script>var divmain2=document.getElementById("divbotao2");divmain2.style.display="none",setTimeout(function(){divmain2.style.display="block"},173e4)</script>     
